# epl_simulator

./: .dockerignore  .gitignore  Dockerfile  README.md  crontab  dockerfile.ww  entrypoint.sh  notes_prof.txt  output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  season_standings_sim.csv  setup.cfg  sim_season.py.lprof
.github/workflows/: deploy.yml
src/app/: app.py
src/config/: config.py
src/db/: db_connect.py
src/db/sql/: mlb_teams.sql  nba_teams.sql  nfl_teams.sql
src/ranker/: calculate_elos.py  elo_utils.py
src/retriever/: config.py  elos.py  fixtures.py
src/simulator/: sim_season.py  sim_utils.py  simulator.py
tests/: conftest.py  test_elos.py  test_fixtures.py  test_ranker.py  test_sim_season.py  test_sim_season_mlb.py  test_sim_season_nba.py  test_sim_season_nfl.py  test_sim_utils.py
tests/data/divisions/: mlb_divisions.csv  nba_divisions.csv  nfl_divisions.csv
tests/data/elos/: current_elos_case_2.csv  current_elos_domestic_case_1.csv  current_elos_mlb_case_1.csv  current_elos_nba_case_1.csv  current_elos_nfl_case_1.csv
tests/data/schedules/: schedule_case_2.csv  schedule_continental_case_1.csv  schedule_continental_case_2.csv  schedule_continental_case_5.csv  schedule_continental_case_6.csv  schedule_continental_case_7.csv  schedule_domestic_case_1.csv  schedule_domestic_case_2.csv  schedule_domestic_case_3.csv  schedule_mlb_case_1.csv  schedule_mlb_case_2.csv  schedule_mlb_case_3.csv  schedule_mlb_case_4.csv  schedule_mlb_case_5.csv  schedule_nba_case_1.csv  schedule_nba_case_2.csv  schedule_nba_case_3.csv  (+10 more)
