[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epl-simulator"
version = "0.1.0"
description = "A Python package that calculates EPL odds"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

authors = [
  { name = "Pierre Lestru" }
]

dependencies = [
   "numpy==1.24.4",
   "pandas==2.0.3",
   "pytest==7.4.0",
   "requests==2.31.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.coverage.run]
omit = [
  "config.py",
  "db_connect.py",
  "__init__.py"
]